public abstract class Shape {
    private double x;
    private double y;

    public Shape(double x, double y) {
        this.x = x;
        this.y = y;
    }

    public double getX() {
        return this.x;
    }

    public void setX(double x) {
        this.x = x;
    }

    public double getY() {
        return this.y;
    }

    public void setY(double y) {
        this.y = y;
    }

    public abstract double calcArea();

    public abstract double calcPerimeter();

    public String toString() {
        return String.format("(%.1f, %.1f)", this.x, this.y);
    }
}

